test/libsolidity/syntaxTests/storageLayoutSpecifier/rational_number_zero_fractional_part.sol
contract A layout at 42.0 {}
contract B layout at 2.5e10 {}
// ----
// UnimplementedFeatureError 1834: (0-28): Code generation is not supported for contracts with specified storage layout base.
